# analysis

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: code-validation.yml  dependabot-auto-merge.yml
proptest-regressions/: types.txt
src/: lib.rs  macros.rs  main.rs  parse.rs  types.rs
src/perm_macro/: Cargo.toml
src/perm_macro/src/: lib.rs
